<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/iniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="80dp"
        android:background="#494949"
        android:fontFamily="sans-serif-light"
        android:onClick="InfoCuenta"
        android:text="@string/iniciar"
        android:textColor="#EAE6E6"
        android:textColorHighlight="#F3EDED"
        android:textColorLink="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <TextView
        android:id="@+id/banco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/banco"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/emni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/emni"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#8C8C8C"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/banco"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <EditText
        android:id="@+id/password"
        android:layout_width="181dp"
        android:layout_height="28dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#222222"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/ingrese_aqu_su_contrase_a"
        android:inputType="textPassword"
        android:maxLength="30"
        android:singleLine="false"
        android:textColor="#FFFCFC"
        android:textColorHint="#6A6A6A"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banco" />

</androidx.constraintlayout.widget.ConstraintLayout>